Bug #18647 cluster.schema database needs to be hidden
Submitted: 30 Mar 2006 13:04 Modified: 6 Dec 2006 4:40
Reporter: Jonathan Miller Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Cluster: Cluster (NDB) storage engine Severity:S3 (Non-critical)
Version:5.1.9 OS:Linux (Linux 32 Bit OS)
Assigned to: david li CPU Architecture:Any

[30 Mar 2006 13:04] Jonathan Miller
Description:
mysql> show databases;
+--------------------+
| Database           |
+--------------------+
| information_schema |
| TESTER2            |
| cluster            |
| mysql              |
| test               |
+--------------------+
5 rows in set (0.00 sec)

mysql> use cluster
Database changed
mysql> show tables;
+-------------------+
| Tables_in_cluster |
+-------------------+
| apply_status      |
| binlog_index      |
| schema            |
+-------------------+
mysql> select * from schema;
ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'schema' at line 1
mysql> show create table schema;
ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'schema' at line 1
mysql> select * from binlog_index;
Empty set (0.00 sec)
mysql> show create table binlog_index\G
*************************** 1. row ***************************
       Table: binlog_index
Create Table: CREATE TABLE `binlog_index` (
  `Position` bigint(20) unsigned NOT NULL,
  `File` varchar(255) NOT NULL,
  `epoch` bigint(20) unsigned NOT NULL,
  `inserts` bigint(20) unsigned NOT NULL,
  `updates` bigint(20) unsigned NOT NULL,
  `deletes` bigint(20) unsigned NOT NULL,
  `schemaops` bigint(20) unsigned NOT NULL,
  PRIMARY KEY (`epoch`)
) ENGINE=MyISAM DEFAULT CHARSET=latin1
1 row in set (0.00 sec)

How to repeat:
see above
[30 Mar 2006 14:47] Jonathan Miller
In talking with Tomas he stated that the database should be a hidden database. That they just have not gotten time yet.
[27 Apr 2006 5:50] Tomas Ulin
this is really non critical
[24 Oct 2006 3:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/14221

ChangeSet@1.2311, 2006-10-24 11:32:15+08:00, dli@dev3-76.dev.cn.tlan +1 -0
  ndb - BUG#18647, cluster.schema database needs to be hidden.
  
  Hide cluster.schema table when executing 'show tables' on mysql client.
[1 Nov 2006 3:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/14648

ChangeSet@1.2317, 2006-11-01 11:04:26+08:00, dli@dev3-76.dev.cn.tlan +1 -0
  ndb - BUG#18647, cluster.schema database needs to be hidden.
  
  Hide cluster.schema table when executing 'show tables' on mysql client.