ndb - BUG#18647, cluster.schema database needs to be hidden.

Hide cluster.schema table when executing 'show tables' on mysql client.


sql/ha_ndbcluster.cc:
  Hide cluster.schema table to user.